log
Sun May  4 17:27:59 -04 2025: 
Compilation failed
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 error generated.
f63ac8e
Sun May  4 17:52:25 -04 2025: 
 treemap.c | 115 +++++++++++++++++++++++++++++++++++++++-----------------------
 1 file changed, 72 insertions(+), 43 deletions(-)
Compilation failed
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 error generated.
df138cf
Sun May  4 17:54:12 -04 2025: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 error generated.
ba20bee
Sun May  4 18:23:21 -04 2025: 
 treemap.c | 166 +++++++++++++++++++-------------------------------------------
 1 file changed, 51 insertions(+), 115 deletions(-)
Compilation failed
In file included from test.c:4:
./treemap.c:115:5: error: void function 'removeNode' should not return a value [-Wreturn-type]
    return NULL;
    ^      ~~~~
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
2 errors generated.
e196ab7
Sun May  4 18:23:43 -04 2025: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 error generated.
23de55c
Sun May  4 18:33:04 -04 2025: 
 treemap.c | 129 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 128 insertions(+), 1 deletion(-)
Compilation failed
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 error generated.
6906446
Sun May  4 18:37:16 -04 2025: 
Compilation failed
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 error generated.
309b29b
Sun May  4 18:41:14 -04 2025: 
Compilation failed
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 error generated.
f57373b
Sun May  4 18:52:10 -04 2025: 
Compilation failed
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 error generated.
5b771ce
Sun May  4 18:55:23 -04 2025: 
 tests:  29|0
total_score: 70/70
945c316
